--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         </activity>
         <activity
             android:name=".UserLoginActivity"
-            android:label="LOGIN" />
+            android:label="Login" />
         <activity
             android:name=".DashboardActivity"
             android:label="@string/app_name"
@@ -31,8 +31,8 @@
             android:name=".EntryInput"
             android:label="Enter Credentials" />
         <activity
-            android:name=".ChangePassActivity"
-            android:label="Change Master Password" />
+            android:name=".EditEntry"
+            android:label="Edit Credentials" />
     </application>
 
 </manifest>
